# roc-analysis

./: .gitignore  package.json  pnpm-lock.yaml  pyproject.toml  slides.md  slides.tr.md
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
components/: InteractiveAuc.vue  InteractiveAucCalculation.vue  InteractiveConfusionMatrix.vue  InteractiveConvexHull.vue  InteractiveMultiClass.vue  InteractivePrVsRoc.vue  InteractiveROC.vue  RocSpace.vue  SpamRoc.vue
src/: roc.py  roc_real_usecase.py
src/__marimo__/session/: roc.py.json  roc_real_usecase.py.json
