[project]
name = "roc-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo[mcp]>=0.17.8",
    "openai>=2.8.1",
    "plotly[express]>=6.5.0",
    "polars>=1.35.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ty>=0.0.1a27",
]
